force-app/main/default/objects/DIR_Employee_recognition_award__c/DIR_Employee_recognition_award__c.object-meta.xml
<CustomObject>
    <label>DIR Employee recognition award</label>
    <nameField>
        <displayFormat>DIR-ERA-{000000000}</displayFormat>
        <label>DIR Employee recognition award Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DIR Employee recognition awards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>