force-app/main/default/objects/DIR_Employee_recognition_award__c/fields/Nomination_Category__c.field-meta.xml
<CustomField>
    <fullName>Nomination_Category__c</fullName>
    <label>Nomination Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fulfilling the Mission Award</fullName>
            </value>
            <value>
                <fullName>Team Award</fullName>
            </value>
            <value>
                <fullName>Going the Extra Mile Award</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>