force-app/main/default/objects/DIR_Employee_recognition_award__c/fields/Nominee_division__c.field-meta.xml
<CustomField>
    <fullName>Nominee_division__c</fullName>
    <label>Nominee division</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DAS</fullName>
            </value>
            <value>
                <fullName>DLSE</fullName>
            </value>
            <value>
                <fullName>DWC</fullName>
            </value>
            <value>
                <fullName>DOSH</fullName>
            </value>
            <value>
                <fullName>Director's Office</fullName>
            </value>
            <value>
                <fullName>DIR HR</fullName>
            </value>
            <value>
                <fullName>DIR IT</fullName>
            </value>
            <value>
                <fullName>OSIP</fullName>
            </value>
            <value>
                <fullName>OSHAB</fullName>
            </value>
            <value>
                <fullName>OSHSB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>