force-app/main/default/objects/DIR_Employee_recognition_award__c/fields/Nominee_name__c.field-meta.xml
<CustomField>
    <fullName>Nominee_name__c</fullName>
    <label>Nominee name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>