force-app/main/default/objects/DIR_Employee_recognition_award__c/fields/Nominee_office_location__c.field-meta.xml
<CustomField>
    <fullName>Nominee_office_location__c</fullName>
    <label>Nominee office location</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Anaheim</fullName>
            </value>
            <value>
                <fullName>Bakersfield</fullName>
            </value>
            <value>
                <fullName>Chico</fullName>
            </value>
            <value>
                <fullName>Concord</fullName>
            </value>
            <value>
                <fullName>El Centro</fullName>
            </value>
            <value>
                <fullName>Eureka</fullName>
            </value>
            <value>
                <fullName>Fresno</fullName>
            </value>
            <value>
                <fullName>Long Beach</fullName>
            </value>
            <value>
                <fullName>Los Angeles</fullName>
            </value>
            <value>
                <fullName>Murrieta</fullName>
            </value>
            <value>
                <fullName>Oakland</fullName>
            </value>
            <value>
                <fullName>Oxnard</fullName>
            </value>
            <value>
                <fullName>Pomona</fullName>
            </value>
            <value>
                <fullName>Redding</fullName>
            </value>
            <value>
                <fullName>Riverside</fullName>
            </value>
            <value>
                <fullName>Sacramento</fullName>
            </value>
            <value>
                <fullName>Salinas</fullName>
            </value>
            <value>
                <fullName>San Bernardino</fullName>
            </value>
            <value>
                <fullName>San Diego</fullName>
            </value>
            <value>
                <fullName>San Francisco</fullName>
            </value>
            <value>
                <fullName>San Jose</fullName>
            </value>
            <value>
                <fullName>San Luis Obispo</fullName>
            </value>
            <value>
                <fullName>Santa Ana</fullName>
            </value>
            <value>
                <fullName>Santa Barbara</fullName>
            </value>
            <value>
                <fullName>Santa Maria</fullName>
            </value>
            <value>
                <fullName>Santa Rosa</fullName>
            </value>
            <value>
                <fullName>Stockton</fullName>
            </value>
            <value>
                <fullName>Van Nuys</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>