force-app/main/default/objects/DIR_Employee_recognition_award__c/fields/Nominee_s_immediate_supervisor__c.field-meta.xml
<CustomField>
    <fullName>Nominee_s_immediate_supervisor__c</fullName>
    <label>Nominee's immediate supervisor</label>
    <length>50</length>
    <type>Text</type>
</CustomField>