force-app/main/default/objects/DIR_Employee_recognition_award__c/fields/Submitter_name__c.field-meta.xml
<CustomField>
    <fullName>Submitter_name__c</fullName>
    <label>Submitter name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>